--- a/DirectX12Project.vcxproj
+++ b/DirectX12Project.vcxproj
@@ -148,10 +148,12 @@
   <ItemGroup>
     <ClCompile Include="Game\Game.cpp" />
     <ClCompile Include="Game\Main.cpp" />
+    <ClCompile Include="Lib\DirectX12.cpp" />
     <ClCompile Include="Lib\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game\Game.h" />
+    <ClInclude Include="Lib\DirectX12.h" />
     <ClInclude Include="Lib\Singleton.h" />
     <ClInclude Include="Lib\Window.h" />
   </ItemGroup>
