--- a/DirectX12Project.vcxproj.filters
+++ b/DirectX12Project.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="Lib\DirectX12.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="Lib\GlobalValue.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
