--- a/DirectX12Project.vcxproj.filters
+++ b/DirectX12Project.vcxproj.filters
@@ -45,4 +45,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="Lib\Shader\ShaderSample.hlsl">
+      <Filter>ヘッダー ファイル</Filter>
+    </FxCompile>
+  </ItemGroup>
 </Project>
