--- a/DirectX12Project.vcxproj
+++ b/DirectX12Project.vcxproj
@@ -93,6 +93,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -125,6 +126,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -156,6 +158,7 @@
     <ClInclude Include="Lib\DirectX12.h" />
     <ClInclude Include="Lib\GlobalValue.h" />
     <ClInclude Include="Lib\Singleton.h" />
+    <ClInclude Include="Lib\WaveFrontReader.h" />
     <ClInclude Include="Lib\Window.h" />
   </ItemGroup>
   <ItemGroup>
