--- a/DirectX12Project.vcxproj.filters
+++ b/DirectX12Project.vcxproj.filters
@@ -44,6 +44,9 @@
     <ClInclude Include="Lib\GlobalValue.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="Lib\WaveFrontReader.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Lib\Shader\ShaderSample.hlsl">
